--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="time; URL=https://www.linkedin.com/in/airtonespind/" />
+    <meta http-equiv="refresh" content="time; URL=https://www.linkedin.com/in/airtonespind" />
   </head>
-  <body></body>
+  <body>
+    <script>
+      window.location.href = "https://www.linkedin.com/in/airtonespind";
+    </script>
+  </body>
 </html>
